--- a/Arranque y configuracion/equipo.config
+++ b/Arranque y configuracion/equipo.config
@@ -1,3 +1,4 @@
+[Kafka]
 IP=192.168.1.249
 PORT=9092
-TOPICS=solicitudes-clientes,estados-taxis
+TOPICS=Customer-Central,Central-Customer,estados-taxis
